2009-05-28  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (tokenize-symbol-thoroughly): Make it work correctly
	on escaped symbols.

2009-05-28  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-disconnect): Now only disconnects one
	connection, current one by default, or given by argument.
	(slime-disconnect-all): New. What `slime-disconnect' was before.
	(def-slime-test): Changed: expected failures are now given
	by (:fails-for ...) clauses. Extended: new clause (:style ...) to
	have a test run only on a certain communication style. Updated
	existing test cases accordingly.
	([struct] slime-test): New slot `skipped'.
	(slime-skipped-tests): New var.
	(slime-execute-tests): Adapted accordingly.
	([test] disconnect): Renamed to `disconnect-and-reconnect'
	([test] disconnect-one-conneciton): New.

	Adapted from patch by Stas Boukarev.

2009-05-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([test] fancy-symbol-names): Add cases involving #|
	... |# style comments. Currently failing.

	Reported by Madhu.

2009-05-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-goto-location-position): Only go to match-beginning if
	search succeeded.

	Patch by Madhu.

2009-05-23  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (break-in-sldb): Honor *break-on-signals*.
	That means that we can't use SIGNAL here and we have to invoke
	SLDB directly.
	(condition-for-break): New helper.
	Reported by Bill St. Clair.

2009-05-19  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-symbol-at-point): Sometimes we can be too good,
	e.g. in "|# (defun foo () (getf" the above would return nil
	because the vertical bar is not terminated. The user probably
	wants "getf" nontheless.

	Reported by Madhu.

2009-05-19  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (sldb-restartable-frame-line-face): Set a default value.
	(sldb-frame-restartable-p): New.
	(sldb-compute-frame-face): Use it.